Movie_ratings_project.ipynb

--- a/Movie_ratings_project.ipynb
+++ b/Movie_ratings_project.ipynb
@@ -2468,7 +2468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion: Ok, I was confident this would happen but I didn't expect it would be that bad. It's obvious Fandango was consistently overrating movies that were objectively bad and therefore tricked people into buying tickets to movies they wouldn't otherwise watch."
+    "## Conclusion: It's obvious Fandango was consistently overrating movies that were objectively bad and therefore tricked people into buying tickets to movies they wouldn't otherwise watch."
    ]
   }
  ],
